src/test/fail/return_expected.ly
<@lily
function f( => integer) { }
f()
@>